test/mutation_analysis/s0006_zigzag_conversion/hafis/starchat/mutants/31/result.txt
./test/mutation_analysis/s0006_zigzag_conversion/hafis/starchat/mutants/31/Solution.java:31: error: unreachable statement
                while (false) {
                              ^
1 error
